# chess-agi

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.dataset.txt  README.roboflow.txt  README_ENHANCED_CHESS_ANALYSIS.md  WANDB_INTEGRATION_SUMMARY.md  YOLO11_UPGRADE_SUMMARY.md  changelog.md  clean_up_roboflow.py  data.yaml  pyproject.toml  readme.md  requirements.txt  run_training.py  start_act.py  start_gr00t.py  start_training.py  test_wandb_integration.py
datasets/roboflow/: data.yaml
docs/: huggingface_datasets_guide.md
examples/: analyze_chess_board.py  upload_datasets_example.py
scripts/: README_stream_chess_analysis.md  analyze_chess_board.py  download_datasets.py  enhanced_chess_analysis.py  show_cameras.py  stream_camera.py  stream_chess_analysis.py  upload_datasets_example.py  upload_datasets_hf.py  upload_hf.py  upload_model_hf.py  upload_to_hf.py
src/: base_model.py  camera.py  datatypes.py  detect_board-perspective.py  detect_pieces.py  record_lerobot_dataset.py  utils.py  visualisation.py
src/chess_board_detection/: README.md  __init__.py  chess_board_analyzer.py  classical_method.py  cli.py  download_data.py  inference_example.py  model.py  predict.py  test_model.py  train.py  upload_hf.py
src/chess_board_detection/yolo/: inference_example.py  model.py  test_model.py  train.py
src/chess_board_detection/yolo/segmentation/: segmentation_model.py  test_segmentation.py  train_segmentation.py
src/chess_piece_detection/: README.md  inference_example.py  model.py  train.py  train_model.py
src/data_prep/: README.md  download_data.py  download_from_hf.py  prepare_and_upload_datasets.py  roboflow_chess.py  upload_to_hf.py
src/deprecated/: detect_board-perspective.py
src/phospho_mod/: start_act.py  start_gr00t.py
