[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chesso"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg",
    "chess",
    "datasets",
    "ffmpeg-python",
    "huggingface-hub",
    "ipykernel",
    "ipython",
    "kaggle",
    "kagglehub",
    "matplotlib",
    "opencv-python",
    "pillow",
    "pipwin",
    "pyyaml",
    "roboflow",
    "ruff",
    "scikit-learn>=1.7.0",
    "scipy",
    "svglib",
    "timm",
    "ultralytics",
    "wandb",
]

[tool.setuptools.packages.find]
where = ["."] 
